--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/davidmwhynot/xrealmgold/issues"
   },
-  "homepage": "https://github.com/davidmwhynot/xrealmgold#readme"
+  "homepage": "https://github.com/davidmwhynot/xrealmgold#readme",
+  "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "babel-loader": "^8.0.5",
+    "gulp": "^4.0.0",
+    "preact": "^8.4.2",
+    "webpack": "^4.28.4",
+    "webpack-stream": "^5.2.1"
+  }
 }
