--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
+	"presets": [
+		[
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "entry"
+      }
+    ]
+	],
 	"plugins": [
-		["@babel/plugin-transform-react-jsx", { "pragma": "h" }]
+		["@babel/plugin-transform-react-jsx", { "pragma": "h" }],
+		["@babel/plugin-proposal-class-properties", { "loose": false }]
 	]
 }
