--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "homepage": "https://github.com/davidmwhynot/xrealmgold#readme",
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-sass": "^4.0.2",
     "preact": "^8.4.2",
+    "preact-animate": "^3.0.5",
+    "preact-redux": "^2.0.3",
+    "preact-router": "^2.6.1",
+    "preact-transition-group": "^1.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.28.4",
     "webpack-stream": "^5.2.1"
   }
